🌐 Change: the label format of the internalization variables

--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,94 +1,96 @@
 {
-  "language": "es",
-  "language_en": "Ingles",
-  "language_es": "Español",
-  "language_label": "Idioma",
-  "app_name": "Tasking",
+  "@@locale": "es",
+  "APP_NAME": "Tasking",
+  "BUTTON_ADD_DUE_DATE": "Fecha de vencimiento",
+  "BUTTON_CANCEL": "Cancelar",
+  "BUTTON_CLEAR": "Limpiar",
+  "BUTTON_CONTINUE": "Continuar",
+  "BUTTON_DELETE": "Eliminar",
+  "BUTTON_DELETE_TASK": "Eliminar tarea",
+  "BUTTON_HIDE_COMPLETED": "Ocultar Completado",
+  "BUTTON_REMINDER": "Recuerdame",
+  "BUTTON_REMOVE": "Eliminar",
+  "BUTTON_SAVE": "Guardar",
+  "BUTTON_SHOW_COMPLETED": "Mostrar Completado",
+  "LANGUAGE": "Idioma",
+  "LANGUAGE_EN": "Ingles",
+  "LANGUAGE_ES": "Español",
+  "MODAL_BACKUP_EXPORT": "Exportar en el dispositivo",
+  "MODAL_BACKUP_IMPORT": "Importar desde el dispositivo",
+  "PAGE_ABOUT_AUTHOR": "Ingedevs",
+  "PAGE_ABOUT_AUTHOR_DESCRIPTION": "Soy un desarrollador de software de México. Me encanta crear aplicaciones y aprender cosas nuevas.",
+  "PAGE_ABOUT_BUILT_PART1": "Hecho en ",
+  "PAGE_ABOUT_BUILT_PART2": " con mucho ",
+  "PAGE_ABOUT_DESCRIPTION": "Tasking es una aplicación simple del administrador de tareas. Es gratis y de código abierto.",
+  "PAGE_INTRO_BUTTON": "Empezar",
+  "PAGE_INTRO_DISCLAIMER": "*Esta aplicación todavía está en beta, espere el comportamiento inesperado y los cambios de la interfaz de usuario.*",
+  "PAGE_INTRO_OPTION1": "Administre su tiempo con nuestra aplicación",
+  "PAGE_INTRO_OPTION2": "Monitoreo de tareas con recordatorios diarios",
+  "PAGE_INTRO_OPTION3": "Almacenamiento local en el dispositivo",
+  "PAGE_INTRO_OPTION4": "Sus datos son privados y seguros",
+  "PAGE_INTRO_STEP1_DESCRIPTION": "Sincroniza tus tareas en todos los dispositivos, en cualquier lugar y en cualquier momento. Soporte sin conexión incluido.",
+  "PAGE_INTRO_STEP1_TITLE": "Sincronización en la nube",
+  "PAGE_INTRO_STEP3_NOTIFICATION_BODY": "Habilite las notificaciones para recibir recordatorios de sus tareas. Puede cambiar esto en la configuración de su dispositivo.",
+  "PAGE_INTRO_STEP3_NOTIFICATION_TITLE": "Ey! Necesitamos tu permiso",
+  "PAGE_INTRO_SUBTITLE": "Una forma simple de controlar su vida digital",
+  "PAGE_LANGUAGE_DESCRIPTION1": "La aplicación de Tasking usa el mismo idioma que tengas configurado en el dispositivo.",
+  "PAGE_LANGUAGE_DESCRIPTION2": "El idioma que esta configurado en tu dispositivo es: ",
+  "PAGE_LANGUAGE_DESCRIPTION3": "Si deseas cambiar el idioma de la aplicación, sigue estos pasos:",
+  "PAGE_LANGUAGE_DESCRIPTION4": "Cuando cambies el idioma configurado, la aplicación de Tasking se actualizara automáticamente al nuevo idioma.",
+  "PAGE_LANGUAGE_STEP1": "•  Ve a la pantalla de inicio de tu dispositivo.",
+  "PAGE_LANGUAGE_STEP2": "•  Abre los ajustes del dispositivo.",
+  "PAGE_LANGUAGE_STEP3": "•  Busca los ajustes de idioma.",
+  "PAGE_LANGUAGE_STEP4": "•  Elige un idioma de la lista.",
+  "PAGE_LANGUAGE_STEP5": "•  Confirma tu elección.",
+  "PAGE_NOTIFICATIONS_DESCRIPTION": "Establezca una hora para mostrar una notificación cuando haya recordatorios de todo el día (sin hora especificada).",
+  "PAGE_NOTIFICATIONS_ERROR_PERMISSION": "Las notificaciones están desactivadas: Debes activarlas desde la configuración.",
+  "PAGE_NOTIFICATIONS_LABEL": "RECORDATORIOS DE TODO EL DÍA",
+  "PAGE_NOTIFICATIONS_TITLE": "Notificaciones de hoy",
+  "calendar_custom": "Otro día",
+  "calendar_today": "Hoy",
+  "calendar_tomorrow": "Mañana",
+  "coming_soon_subtitle_modal": "Esta característica aún no está disponible, pero estamos trabajando en ello.",
+  "coming_soon_title_modal": "Muy pronto",
   "default_group_1": "Tareas",
   "default_group_2": "Compras",
   "default_group_3": "Trabajo",
-  "intro_subtitle": "Una forma simple de controlar su vida digital",
-  "intro_option1": "Administre su tiempo con nuestra aplicación",
-  "intro_option2": "Monitoreo de tareas con recordatorios diarios",
-  "intro_option3": "Almacenamiento local en el dispositivo",
-  "intro_option4": "Sus datos son privados y seguros",
-  "intro_disclaimer": "*Esta aplicación todavía está en beta, espere el comportamiento inesperado y los cambios de la interfaz de usuario.*",
-  "intro_button": "Empezar",
-  "intro_notification_title": "Ey! Necesitamos tu permiso",
-  "intro_notification_body": "Habilite las notificaciones para recibir recordatorios de sus tareas. Puede cambiar esto en la configuración de su dispositivo.",
-  "home_title": "Tus tareas",
-  "home_button_add": "Agregar una tarea",
-  "home_empty_tasks": "No hay tareas",
-  "home_pending": "Pendiente",
-  "home_completed": "Completado",
-  "button_delete_task": "Eliminar tarea",
-  "button_save": "Guardar",
-  "button_delete": "Eliminar",
-  "button_clear": "Limpiar",
-  "button_show": "Mostrar Completado",
-  "button_hide": "Ocultar Completado",
-  "button_cancel": "Cancelar",
-  "button_continue": "Continuar",
-  "button_reminder": "Recuerdame",
-  "button_due_date": "Fecha de vencimiento",
-  "button_remove": "Eliminar",
-  "label_date": "Fecha",
-  "label_time": "Tiempo",
   "dialog_delete_subtitle": "No podrás deshacer esta acción.",
   "dialog_delete_title": "Se eliminará permanentemente.",
-  "task_empty_title": "Ups! Tarea no encontrada",
-  "task_empty_subtitle": "Vuelve al inicio y agrega una nueva tarea",
-  "settings_title": "Configuración",
-  "settings_label_general": "General",
+  "dialog_restore_subtitle": "¿Estás seguro de que quieres restaurar la aplicación de datos?Esta acción no se puede deshacer.",
+  "dialog_restore_title": "Restaurar la aplicación",
+  "group_add_button": "Agregar grupo",
+  "group_delete_confirm_description": "¿Estás seguro de eliminar este grupo?, se eliminarán todas las tareas que contiene y no se podrán recuperar.",
+  "group_name_field": "Nombre del grupo",
+  "group_options_delete_subtitle": "No puedes eliminar el grupo seleccionado",
+  "group_options_delete_title": "Eliminar grupo",
+  "group_options_edit": "Editar grupo",
+  "group_select_subtitle": "Mantén para más opciones",
+  "group_select_title": "Seleccionar grupo",
+  "home_button_add": "Agregar una tarea",
+  "home_completed": "Completado",
+  "home_empty_tasks": "No hay tareas",
+  "home_pending": "Pendiente",
+  "home_title": "Tus tareas",
+  "label_date": "Fecha",
+  "label_time": "Tiempo",
+  "notification_disable_description_modal": "Habilite las notificaciones desde la configuración para recibir una notificación sobre sus tareas.",
+  "notification_disable_title_modal": "Notificaciones deshabilitadas",
+  "notification_enable_description_modal": "Recibirá una notificación sobre sus tareas y recordatorios diarios.",
+  "notification_enable_title_modal": "Notificaciones habilitadas",
+  "reminder_notification_title": "Tienes una tarea pendiente",
+  "settings_about_app": "Acerca de Tasking",
+  "settings_button_restore_app": "Restablecer la aplicación",
+  "settings_custom_theme": "Tema de la aplicación",
   "settings_general_cloud": "Copia de seguridad",
   "settings_general_notifications": "Notificaciones",
   "settings_general_reminders": "Recordatorios",
-  "settings_custom_theme": "Tema de la aplicación",
   "settings_label_about": "Acerca de",
-  "settings_about_app": "Acerca de Tasking",
+  "settings_label_general": "General",
   "settings_label_info": "Más información",
+  "settings_label_restore": "Zona peligrosa",
   "settings_legal_privacy_policy": "Política de privacidad",
   "settings_support_contact": "Contáctenos",
-  "settings_label_restore": "Zona peligrosa",
-  "settings_button_restore_app": "Restablecer la aplicación",
-  "about_author": "Ingedevs",
-  "about_author_description": "Soy un desarrollador de software de México. Me encanta crear aplicaciones y aprender cosas nuevas.",
-  "about_description": "Tasking es una aplicación simple del administrador de tareas. Es gratis y de código abierto.",
-  "about_built_part1": "Hecho en ",
-  "about_built_part2": " con mucho ",
-  "dialog_restore_title": "Restaurar la aplicación",
-  "dialog_restore_subtitle": "¿Estás seguro de que quieres restaurar la aplicación de datos?Esta acción no se puede deshacer.",
-  "reminder_notification_title": "Tienes una tarea pendiente",
-  "notification_enable_title_modal": "Notificaciones habilitadas",
-  "notification_enable_description_modal": "Recibirá una notificación sobre sus tareas y recordatorios diarios.",
-  "notification_disable_title_modal": "Notificaciones deshabilitadas",
-  "notification_disable_description_modal": "Habilite las notificaciones desde la configuración para recibir una notificación sobre sus tareas.",
-  "group_select_title": "Seleccionar grupo",
-  "group_select_subtitle": "Mantén para más opciones",
-  "group_add_button": "Agregar grupo",
-  "group_name_field": "Nombre del grupo",
-  "group_options_edit": "Editar grupo",
-  "group_options_delete_title": "Eliminar grupo",
-  "group_options_delete_subtitle": "No puedes eliminar el grupo seleccionado",
-  "group_delete_confirm_description": "¿Estás seguro de eliminar este grupo?, se eliminarán todas las tareas que contiene y no se podrán recuperar.",
-  "calendar_today": "Hoy",
-  "calendar_tomorrow": "Mañana",
-  "calendar_custom": "Otro día",
-  "backup_export_modal": "Exportar en el dispositivo",
-  "backup_import_modal": "Importar desde el dispositivo",
-  "coming_soon_title_modal": "Muy pronto",
-  "coming_soon_subtitle_modal": "Esta característica aún no está disponible, pero estamos trabajando en ello.",
-  "pageNotificationsLabel": "RECORDATORIOS DE TODO EL DÍA",
-  "pageNotificationsTitle": "Notificaciones de hoy",
-  "pageNotificationsDescription": "Establezca una hora para mostrar una notificación cuando haya recordatorios de todo el día (sin hora especificada).",
-  "pageNotificationsErrorPermission": "Las notificaciones están desactivadas: Debes activarlas desde la configuración.",
-  "pageLanguageDescription2": "El idioma que esta configurado en tu dispositivo es: ",
-  "pageLanguageDescription1": "La aplicación de Tasking usa el mismo idioma que tengas configurado en el dispositivo.",
-  "pageLanguageDescription3": "Si deseas cambiar el idioma de la aplicación, sigue estos pasos:",
-  "pageLanguageStep1": "•  Ve a la pantalla de inicio de tu dispositivo.",
-  "pageLanguageStep2": "•  Abre los ajustes del dispositivo.",
-  "pageLanguageStep3": "•  Busca los ajustes de idioma.",
-  "pageLanguageStep4": "•  Elige un idioma de la lista.",
-  "pageLanguageStep5": "•  Confirma tu elección.",
-  "pageLanguageDescription4": "Cuando cambies el idioma configurado, la aplicación de Tasking se actualizara automáticamente al nuevo idioma."
+  "settings_title": "Configuración",
+  "task_empty_subtitle": "Vuelve al inicio y agrega una nueva tarea",
+  "task_empty_title": "Ups! Tarea no encontrada"
 }
