--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,89 +1,92 @@
 {
-  "language": "en",
-  "language_en": "English",
-  "language_es": "Spanish",
-  "language_label": "Language",
-  "app_name": "Tasking",
+  "@@locale": "en",
+  "APP_NAME": "Tasking",
+  "BUTTON_ADD_DUE_DATE": "Add Due Date",
+  "BUTTON_CANCEL": "Cancel",
+  "BUTTON_CLEAR": "Clear",
+  "BUTTON_CONTINUE": "Continue",
+  "BUTTON_DELETE": "Delete",
+  "BUTTON_DELETE_TASK": "Delete Task",
+  "BUTTON_HIDE_COMPLETED": "Hide Completed",
+  "BUTTON_REMINDER": "Remind Me",
+  "BUTTON_REMOVE": "Remove",
+  "BUTTON_SAVE": "Save",
+  "BUTTON_SHOW_COMPLETED": "Show Completed",
+  "LANGUAGE": "Language",
+  "LANGUAGE_EN": "English",
+  "LANGUAGE_ES": "Spanish",
+  "MODAL_BACKUP_EXPORT": "Export on the device",
+  "MODAL_BACKUP_IMPORT": "Import from the device",
+  "PAGE_ABOUT_AUTHOR": "Ingedevs",
+  "PAGE_ABOUT_AUTHOR_DESCRIPTION": "I´m a software developer from México. I love to create apps and learn new things.",
+  "PAGE_ABOUT_BUILT_PART1": "Built using ",
+  "PAGE_ABOUT_BUILT_PART2": " with much ",
+  "PAGE_ABOUT_DESCRIPTION": "Tasking is a simple task manager app. It´s free and open source.",
+  "PAGE_INTRO_BUTTON": "Get started",
+  "PAGE_INTRO_DISCLAIMER": "*This app still in beta, expect the unexpected behavior and UI changes*",
+  "PAGE_INTRO_OPTION1": "Manage your time with our app",
+  "PAGE_INTRO_OPTION2": "Task monitoring with daily reminders",
+  "PAGE_INTRO_OPTION3": "Local storage on the device",
+  "PAGE_INTRO_OPTION4": "Your data are private and safe",
+  "PAGE_INTRO_STEP1_DESCRIPTION": "Sync your tasks across all devices, anywhere, anytime. Offline support included.",
+  "PAGE_INTRO_STEP1_TITLE": "Cloud Sync",
+  "PAGE_INTRO_STEP3_NOTIFICATION_BODY": "Enable notifications to receive reminders of your tasks.You can change this in the configuration of your device.",
+  "PAGE_INTRO_STEP3_NOTIFICATION_TITLE": "Hey! We need your permission",
+  "PAGE_INTRO_SUBTITLE": "A simple way to control your digital life",
+  "PAGE_LANGUAGE_DESCRIPTION1": "The tasking application uses the same language you have configured on the device.",
+  "PAGE_LANGUAGE_DESCRIPTION2": "The language that is configured on your device is: ",
+  "PAGE_LANGUAGE_DESCRIPTION3": "If you want to change the application of the application, follow these steps:",
+  "PAGE_LANGUAGE_DESCRIPTION4": "When you change the configured language, the tasking application will automatically update the new language.",
+  "PAGE_LANGUAGE_STEP1": "•  Go to your device´s home screen.",
+  "PAGE_LANGUAGE_STEP2": "•  Open the device settings.",
+  "PAGE_LANGUAGE_STEP3": "•  Look for language adjustments.",
+  "PAGE_LANGUAGE_STEP4": "•  Choose a language from the list.",
+  "PAGE_LANGUAGE_STEP5": "•  Confirm your choice.",
+  "PAGE_NOTIFICATIONS_DESCRIPTION": "Set a time to show a notification when there are all-day reminders (with no specified time).",
+  "PAGE_NOTIFICATIONS_ERROR_PERMISSION": "Notifications are disabled: You must activate them from the settings.",
+  "PAGE_NOTIFICATIONS_LABEL": "ALL-DAY REMINDERS",
+  "PAGE_NOTIFICATIONS_TITLE": "Today notification",
+  "calendar_custom": "Custom",
+  "calendar_today": "Today",
+  "calendar_tomorrow": "Tomorrow",
+  "coming_soon_subtitle_modal": "This feature is not yet available, but we are working on it.",
+  "coming_soon_title_modal": "Coming soon",
   "default_group_1": "ToDo",
   "default_group_2": "Shopping",
   "default_group_3": "Work",
-  "intro_subtitle": "A simple way to control your digital life",
-  "intro_option1": "Manage your time with our app",
-  "intro_option2": "Task monitoring with daily reminders",
-  "intro_option3": "Local storage on the device",
-  "intro_option4": "Your data are private and safe",
-  "intro_disclaimer": "*This app still in beta, expect the unexpected behavior and UI changes*",
-  "intro_button": "Get started",
-  "intro_notification_title": "Hey! We need your permission",
-  "intro_notification_body": "Enable notifications to receive reminders of your tasks.You can change this in the configuration of your device.",
-  "home_title": "Your tasks",
-  "home_button_add": "Add a task",
-  "home_empty_tasks": "No tasks yet",
-  "home_pending": "Pending",
-  "home_completed": "Completed",
-  "button_delete_task": "Delete Task",
-  "button_save": "Save",
-  "button_delete": "Delete",
-  "button_clear": "Clear",
-  "button_show": "Show Completed",
-  "button_hide": "Hide Completed",
-  "button_cancel": "Cancel",
-  "button_continue": "Continue",
-  "button_reminder": "Remind Me",
-  "button_due_date": "Add Due Date",
-  "button_remove": "Remove",
-  "label_date": "Date",
-  "label_time": "Time",
   "dialog_delete_subtitle": "You won´t be able to undo this action.",
   "dialog_delete_title": "Will be permanently deleted.",
-  "task_empty_title": "Ups! Task not found",
-  "task_empty_subtitle": "Go back to home and add a new task",
-  "settings_title": "Settings",
-  "settings_label_general": "General",
+  "dialog_restore_subtitle": "Are you sure you want to restore the data app? This action cannot be undone.",
+  "dialog_restore_title": "Restore App",
+  "group_add_button": "Add group",
+  "group_delete_confirm_description": "Are you sure to eliminate this group? All the tasks it contains will be eliminated and they cannot be recovered.",
+  "group_name_field": "Group name",
+  "group_options_delete_subtitle": "You can´t delete the selected group",
+  "group_options_delete_title": "Delete group",
+  "group_options_edit": "Edit group",
+  "group_select_subtitle": "Keep for more options",
+  "group_select_title": "Select group",
+  "home_button_add": "Add a task",
+  "home_completed": "Completed",
+  "home_empty_tasks": "No tasks yet",
+  "home_pending": "Pending",
+  "home_title": "Your tasks",
+  "label_date": "Date",
+  "label_time": "Time",
+  "reminder_notification_title": "You have a pending task",
+  "settings_about_app": "About Tasking",
+  "settings_button_restore_app": "Restore App",
+  "settings_custom_theme": "Theme App",
   "settings_general_cloud": "Backup Copy",
   "settings_general_notifications": "Notifications",
   "settings_general_reminders": "Reminders",
-  "settings_custom_theme": "Theme App",
   "settings_label_about": "About",
-  "settings_about_app": "About Tasking",
+  "settings_label_general": "General",
   "settings_label_info": "More information",
+  "settings_label_restore": "Danger Zone",
   "settings_legal_privacy_policy": "Privacy Policy",
   "settings_support_contact": "Contact Us",
-  "settings_label_restore": "Danger Zone",
-  "settings_button_restore_app": "Restore App",
-  "about_author": "Ingedevs",
-  "about_author_description": "I´m a software developer from México. I love to create apps and learn new things.",
-  "about_description": "Tasking is a simple task manager app. It´s free and open source.",
-  "about_built_part1": "Built using ",
-  "about_built_part2": " with much ",
-  "dialog_restore_title": "Restore App",
-  "dialog_restore_subtitle": "Are you sure you want to restore the data app? This action cannot be undone.",
-  "group_select_title": "Select group",
-  "group_select_subtitle": "Keep for more options",
-  "group_add_button": "Add group",
-  "group_name_field": "Group name",
-  "group_options_edit": "Edit group",
-  "group_options_delete_title": "Delete group",
-  "group_options_delete_subtitle": "You can´t delete the selected group",
-  "group_delete_confirm_description": "Are you sure to eliminate this group? All the tasks it contains will be eliminated and they cannot be recovered.",
-  "calendar_today": "Today",
-  "calendar_tomorrow": "Tomorrow",
-  "calendar_custom": "Custom",
-  "backup_export_modal": "Export on the device",
-  "backup_import_modal": "Import from the device",
-  "coming_soon_title_modal": "Coming soon",
-  "coming_soon_subtitle_modal": "This feature is not yet available, but we are working on it.",
-  "pageNotificationsLabel": "ALL-DAY REMINDERS",
-  "pageNotificationsTitle": "Today notification",
-  "pageNotificationsDescription": "Set a time to show a notification when there are all-day reminders (with no specified time).",
-  "pageNotificationsErrorPermission": "Notifications are disabled: You must activate them from the settings.",
-  "pageLanguageDescription2": "The language that is configured on your device is: ",
-  "pageLanguageDescription1": "The tasking application uses the same language you have configured on the device.",
-  "pageLanguageDescription3": "If you want to change the application of the application, follow these steps:",
-  "pageLanguageStep1": "•  Go to your device´s home screen.",
-  "pageLanguageStep2": "•  Open the device settings.",
-  "pageLanguageStep3": "•  Look for language adjustments.",
-  "pageLanguageStep4": "•  Choose a language from the list.",
-  "pageLanguageStep5": "•  Confirm your choice.",
-  "pageLanguageDescription4": "When you change the configured language, the tasking application will automatically update the new language."
+  "settings_title": "Settings",
+  "task_empty_subtitle": "Go back to home and add a new task",
+  "task_empty_title": "Ups! Task not found"
 }
