🔨 refactor: Changed to snake_case in the internalization variables

--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,51 +1,17 @@
 {
   "@@locale": "es",
-  "APP_NAME": "Tasking",
-  "BUTTON_ADD_DUE_DATE": "Fecha de vencimiento",
-  "BUTTON_CANCEL": "Cancelar",
-  "BUTTON_CLEAR": "Limpiar",
-  "BUTTON_CONTINUE": "Continuar",
-  "BUTTON_DELETE": "Eliminar",
-  "BUTTON_DELETE_TASK": "Eliminar tarea",
-  "BUTTON_HIDE_COMPLETED": "Ocultar Completado",
-  "BUTTON_REMINDER": "Recuerdame",
-  "BUTTON_REMOVE": "Eliminar",
-  "BUTTON_SAVE": "Guardar",
-  "BUTTON_SHOW_COMPLETED": "Mostrar Completado",
-  "LANGUAGE": "Idioma",
-  "LANGUAGE_EN": "Ingles",
-  "LANGUAGE_ES": "Español",
-  "MODAL_BACKUP_EXPORT": "Exportar en el dispositivo",
-  "MODAL_BACKUP_IMPORT": "Importar desde el dispositivo",
-  "PAGE_ABOUT_AUTHOR": "Ingedevs",
-  "PAGE_ABOUT_AUTHOR_DESCRIPTION": "Soy un desarrollador de software de México. Me encanta crear aplicaciones y aprender cosas nuevas.",
-  "PAGE_ABOUT_BUILT_PART1": "Hecho en ",
-  "PAGE_ABOUT_BUILT_PART2": " con mucho ",
-  "PAGE_ABOUT_DESCRIPTION": "Tasking es una aplicación simple del administrador de tareas. Es gratis y de código abierto.",
-  "PAGE_INTRO_BUTTON": "Empezar",
-  "PAGE_INTRO_DISCLAIMER": "*Esta aplicación todavía está en beta, espere el comportamiento inesperado y los cambios de la interfaz de usuario.*",
-  "PAGE_INTRO_OPTION1": "Administre su tiempo con nuestra aplicación",
-  "PAGE_INTRO_OPTION2": "Monitoreo de tareas con recordatorios diarios",
-  "PAGE_INTRO_OPTION3": "Almacenamiento local en el dispositivo",
-  "PAGE_INTRO_OPTION4": "Sus datos son privados y seguros",
-  "PAGE_INTRO_STEP1_DESCRIPTION": "Sincroniza tus tareas en todos los dispositivos, en cualquier lugar y en cualquier momento. Soporte sin conexión incluido.",
-  "PAGE_INTRO_STEP1_TITLE": "Sincronización en la nube",
-  "PAGE_INTRO_STEP3_NOTIFICATION_BODY": "Habilite las notificaciones para recibir recordatorios de sus tareas. Puede cambiar esto en la configuración de su dispositivo.",
-  "PAGE_INTRO_STEP3_NOTIFICATION_TITLE": "Ey! Necesitamos tu permiso",
-  "PAGE_INTRO_SUBTITLE": "Una forma simple de controlar su vida digital",
-  "PAGE_LANGUAGE_DESCRIPTION1": "La aplicación de Tasking usa el mismo idioma que tengas configurado en el dispositivo.",
-  "PAGE_LANGUAGE_DESCRIPTION2": "El idioma que esta configurado en tu dispositivo es: ",
-  "PAGE_LANGUAGE_DESCRIPTION3": "Si deseas cambiar el idioma de la aplicación, sigue estos pasos:",
-  "PAGE_LANGUAGE_DESCRIPTION4": "Cuando cambies el idioma configurado, la aplicación de Tasking se actualizara automáticamente al nuevo idioma.",
-  "PAGE_LANGUAGE_STEP1": "•  Ve a la pantalla de inicio de tu dispositivo.",
-  "PAGE_LANGUAGE_STEP2": "•  Abre los ajustes del dispositivo.",
-  "PAGE_LANGUAGE_STEP3": "•  Busca los ajustes de idioma.",
-  "PAGE_LANGUAGE_STEP4": "•  Elige un idioma de la lista.",
-  "PAGE_LANGUAGE_STEP5": "•  Confirma tu elección.",
-  "PAGE_NOTIFICATIONS_DESCRIPTION": "Establezca una hora para mostrar una notificación cuando haya recordatorios de todo el día (sin hora especificada).",
-  "PAGE_NOTIFICATIONS_ERROR_PERMISSION": "Las notificaciones están desactivadas: Debes activarlas desde la configuración.",
-  "PAGE_NOTIFICATIONS_LABEL": "RECORDATORIOS DE TODO EL DÍA",
-  "PAGE_NOTIFICATIONS_TITLE": "Notificaciones de hoy",
+  "app_name": "Tasking",
+  "buttom_reminder": "Recordatorio",
+  "button_add_due_date": "Fecha de vencimiento",
+  "button_cancel": "Cancelar",
+  "button_clear": "Limpiar",
+  "button_continue": "Continuar",
+  "button_delete": "Eliminar",
+  "button_delete_task": "Eliminar tarea",
+  "button_hide_completed": "Ocultar Completado",
+  "button_remove": "Eliminar",
+  "button_save": "Guardar",
+  "button_show_completed": "Mostrar Completado",
   "calendar_custom": "Otro día",
   "calendar_today": "Hoy",
   "calendar_tomorrow": "Mañana",
@@ -73,10 +39,42 @@
   "home_title": "Tus tareas",
   "label_date": "Fecha",
   "label_time": "Tiempo",
+  "language": "Idioma",
+  "language_en": "Ingles",
+  "language_es": "Español",
+  "modal_backup_export": "Exportar en el dispositivo",
+  "modal_backup_import": "Importar desde el dispositivo",
   "notification_disable_description_modal": "Habilite las notificaciones desde la configuración para recibir una notificación sobre sus tareas.",
   "notification_disable_title_modal": "Notificaciones deshabilitadas",
   "notification_enable_description_modal": "Recibirá una notificación sobre sus tareas y recordatorios diarios.",
   "notification_enable_title_modal": "Notificaciones habilitadas",
+  "page_about_author": "Ingedevs",
+  "page_about_author_description": "Soy un desarrollador de software de México. Me encanta crear aplicaciones y aprender cosas nuevas.",
+  "page_about_built_part_1": "Hecho en ",
+  "page_about_built_part_2": " con mucho ",
+  "page_about_description": "Tasking es una aplicación simple del administrador de tareas. Es gratis y de código abierto.",
+  "page_intro_button": "Empezar",
+  "page_intro_disclaimer": "*Esta aplicación todavía está en beta, espere el comportamiento inesperado y los cambios de la interfaz de usuario.*",
+  "page_intro_option_1": "Administre su tiempo con nuestra aplicación",
+  "page_intro_option_2": "Almacenamiento local en el dispositivo",
+  "page_intro_step3_notification_title": "Ey! Necesitamos tu permiso",
+  "page_intro_step_1_description": "Sincroniza tus tareas en todos los dispositivos, en cualquier lugar y en cualquier momento. Soporte sin conexión incluido.",
+  "page_intro_step_1_title": "Sincronización en la nube",
+  "page_intro_step_3_notification_body": "Habilite las notificaciones para recibir recordatorios de sus tareas. Puede cambiar esto en la configuración de su dispositivo.",
+  "page_intro_subtitle": "Una forma simple de controlar su vida digital",
+  "page_language_description_1": "La aplicación de Tasking usa el mismo idioma que tengas configurado en el dispositivo.",
+  "page_language_description_2": "El idioma que esta configurado en tu dispositivo es: ",
+  "page_language_description_3": "Si deseas cambiar el idioma de la aplicación, sigue estos pasos:",
+  "page_language_description_4": "Cuando cambies el idioma configurado, la aplicación de Tasking se actualizara automáticamente al nuevo idioma.",
+  "page_language_step_1": "•  Ve a la pantalla de inicio de tu dispositivo.",
+  "page_language_step_2": "•  Abre los ajustes del dispositivo.",
+  "page_language_step_3": "•  Busca los ajustes de idioma.",
+  "page_language_step_4": "•  Elige un idioma de la lista.",
+  "page_language_step_5": "•  Confirma tu elección.",
+  "page_notifications_description": "Establezca una hora para mostrar una notificación cuando haya recordatorios de todo el día (sin hora especificada).",
+  "page_notifications_error_permission": "Las notificaciones están desactivadas: Debes activarlas desde la configuración.",
+  "page_notifications_label": "RECORDATORIOS DE TODO EL DÍA",
+  "page_notifications_title": "Notificaciones de hoy",
   "reminder_notification_title": "Tienes una tarea pendiente",
   "settings_about_app": "Acerca de Tasking",
   "settings_button_restore_app": "Restablecer la aplicación",
