--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,51 +1,17 @@
 {
   "@@locale": "en",
-  "APP_NAME": "Tasking",
-  "BUTTON_ADD_DUE_DATE": "Add Due Date",
-  "BUTTON_CANCEL": "Cancel",
-  "BUTTON_CLEAR": "Clear",
-  "BUTTON_CONTINUE": "Continue",
-  "BUTTON_DELETE": "Delete",
-  "BUTTON_DELETE_TASK": "Delete Task",
-  "BUTTON_HIDE_COMPLETED": "Hide Completed",
-  "BUTTON_REMINDER": "Remind Me",
-  "BUTTON_REMOVE": "Remove",
-  "BUTTON_SAVE": "Save",
-  "BUTTON_SHOW_COMPLETED": "Show Completed",
-  "LANGUAGE": "Language",
-  "LANGUAGE_EN": "English",
-  "LANGUAGE_ES": "Spanish",
-  "MODAL_BACKUP_EXPORT": "Export on the device",
-  "MODAL_BACKUP_IMPORT": "Import from the device",
-  "PAGE_ABOUT_AUTHOR": "Ingedevs",
-  "PAGE_ABOUT_AUTHOR_DESCRIPTION": "I´m a software developer from México. I love to create apps and learn new things.",
-  "PAGE_ABOUT_BUILT_PART1": "Built using ",
-  "PAGE_ABOUT_BUILT_PART2": " with much ",
-  "PAGE_ABOUT_DESCRIPTION": "Tasking is a simple task manager app. It´s free and open source.",
-  "PAGE_INTRO_BUTTON": "Get started",
-  "PAGE_INTRO_DISCLAIMER": "*This app still in beta, expect the unexpected behavior and UI changes*",
-  "PAGE_INTRO_OPTION1": "Manage your time with our app",
-  "PAGE_INTRO_OPTION2": "Task monitoring with daily reminders",
-  "PAGE_INTRO_OPTION3": "Local storage on the device",
-  "PAGE_INTRO_OPTION4": "Your data are private and safe",
-  "PAGE_INTRO_STEP1_DESCRIPTION": "Sync your tasks across all devices, anywhere, anytime. Offline support included.",
-  "PAGE_INTRO_STEP1_TITLE": "Cloud Sync",
-  "PAGE_INTRO_STEP3_NOTIFICATION_BODY": "Enable notifications to receive reminders of your tasks.You can change this in the configuration of your device.",
-  "PAGE_INTRO_STEP3_NOTIFICATION_TITLE": "Hey! We need your permission",
-  "PAGE_INTRO_SUBTITLE": "A simple way to control your digital life",
-  "PAGE_LANGUAGE_DESCRIPTION1": "The tasking application uses the same language you have configured on the device.",
-  "PAGE_LANGUAGE_DESCRIPTION2": "The language that is configured on your device is: ",
-  "PAGE_LANGUAGE_DESCRIPTION3": "If you want to change the application of the application, follow these steps:",
-  "PAGE_LANGUAGE_DESCRIPTION4": "When you change the configured language, the tasking application will automatically update the new language.",
-  "PAGE_LANGUAGE_STEP1": "•  Go to your device´s home screen.",
-  "PAGE_LANGUAGE_STEP2": "•  Open the device settings.",
-  "PAGE_LANGUAGE_STEP3": "•  Look for language adjustments.",
-  "PAGE_LANGUAGE_STEP4": "•  Choose a language from the list.",
-  "PAGE_LANGUAGE_STEP5": "•  Confirm your choice.",
-  "PAGE_NOTIFICATIONS_DESCRIPTION": "Set a time to show a notification when there are all-day reminders (with no specified time).",
-  "PAGE_NOTIFICATIONS_ERROR_PERMISSION": "Notifications are disabled: You must activate them from the settings.",
-  "PAGE_NOTIFICATIONS_LABEL": "ALL-DAY REMINDERS",
-  "PAGE_NOTIFICATIONS_TITLE": "Today notification",
+  "app_name": "Tasking",
+  "buttom_reminder": "Reminder",
+  "button_add_due_date": "Add Due Date",
+  "button_cancel": "Cancel",
+  "button_clear": "Clear",
+  "button_continue": "Continue",
+  "button_delete": "Delete",
+  "button_delete_task": "Delete Task",
+  "button_hide_completed": "Hide Completed",
+  "button_remove": "Remove",
+  "button_save": "Save",
+  "button_show_completed": "Show Completed",
   "calendar_custom": "Custom",
   "calendar_today": "Today",
   "calendar_tomorrow": "Tomorrow",
@@ -73,6 +39,38 @@
   "home_title": "Your tasks",
   "label_date": "Date",
   "label_time": "Time",
+  "language": "Language",
+  "language_en": "English",
+  "language_es": "Spanish",
+  "modal_backup_export": "Export on the device",
+  "modal_backup_import": "Import from the device",
+  "page_about_author": "Ingedevs",
+  "page_about_author_description": "I´m a software developer from México. I love to create apps and learn new things.",
+  "page_about_built_part_1": "Built using ",
+  "page_about_built_part_2": " with much ",
+  "page_about_description": "Tasking is a simple task manager app. It´s free and open source.",
+  "page_intro_button": "Get started",
+  "page_intro_disclaimer": "*This app still in beta, expect the unexpected behavior and UI changes*",
+  "page_intro_option_1": "Manage your time with our app",
+  "page_intro_option_2": "Local storage on the device",
+  "page_intro_step3_notification_title": "Hey! We need your permission",
+  "page_intro_step_1_description": "Sync your tasks across all devices, anywhere, anytime. Offline support included.",
+  "page_intro_step_1_title": "Cloud Sync",
+  "page_intro_step_3_notification_body": "Enable notifications to receive reminders of your tasks.You can change this in the configuration of your device.",
+  "page_intro_subtitle": "A simple way to control your digital life",
+  "page_language_description_1": "The tasking application uses the same language you have configured on the device.",
+  "page_language_description_2": "The language that is configured on your device is: ",
+  "page_language_description_3": "If you want to change the application of the application, follow these steps:",
+  "page_language_description_4": "When you change the configured language, the tasking application will automatically update the new language.",
+  "page_language_step_1": "•  Go to your device´s home screen.",
+  "page_language_step_2": "•  Open the device settings.",
+  "page_language_step_3": "•  Look for language adjustments.",
+  "page_language_step_4": "•  Choose a language from the list.",
+  "page_language_step_5": "•  Confirm your choice.",
+  "page_notifications_description": "Set a time to show a notification when there are all-day reminders (with no specified time).",
+  "page_notifications_error_permission": "Notifications are disabled: You must activate them from the settings.",
+  "page_notifications_label": "ALL-DAY REMINDERS",
+  "page_notifications_title": "Today notification",
   "reminder_notification_title": "You have a pending task",
   "settings_about_app": "About Tasking",
   "settings_button_restore_app": "Restore App",
