🔨 refactor: Update intro page with features and texts

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -51,8 +51,10 @@
   "page_about_description": "Tasking is a simple task manager app. It´s free and open source.",
   "page_intro_button": "Get started",
   "page_intro_disclaimer": "*This app still in beta, expect the unexpected behavior and UI changes*",
-  "page_intro_option_1": "Manage your time with our app",
-  "page_intro_option_2": "Local storage on the device",
+  "page_intro_feature_1": "Manage your time efficiently",
+  "page_intro_feature_2": "Local storage on the device",
+  "page_intro_feature_3": "Your data is private and secure",
+  "page_intro_feature_4": "Personalized reminders and notifications",
   "page_intro_step3_notification_title": "Hey! We need your permission",
   "page_intro_step_1_description": "Sync your tasks across all devices, anywhere, anytime. Offline support included.",
   "page_intro_step_1_title": "Cloud Sync",
