--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -55,8 +55,10 @@
   "page_about_description": "Tasking es una aplicación simple del administrador de tareas. Es gratis y de código abierto.",
   "page_intro_button": "Empezar",
   "page_intro_disclaimer": "*Esta aplicación todavía está en beta, espere el comportamiento inesperado y los cambios de la interfaz de usuario.*",
-  "page_intro_option_1": "Administre su tiempo con nuestra aplicación",
-  "page_intro_option_2": "Almacenamiento local en el dispositivo",
+  "page_intro_feature_1": "Administra tu tiempo de forma eficiente",
+  "page_intro_feature_2": "Almacenamiento local en el dispositivo",
+  "page_intro_feature_3": "Sus datos son privados y seguros",
+  "page_intro_feature_4": "Recordatorios y notificaciones personalizadas",
   "page_intro_step3_notification_title": "Ey! Necesitamos tu permiso",
   "page_intro_step_1_description": "Sincroniza tus tareas en todos los dispositivos, en cualquier lugar y en cualquier momento. Soporte sin conexión incluido.",
   "page_intro_step_1_title": "Sincronización en la nube",
