--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -92,5 +92,17 @@
   "settings_support_contact": "Contáctenos",
   "settings_title": "Configuración",
   "task_empty_subtitle": "Vuelve al inicio y agrega una nueva tarea",
-  "task_empty_title": "Ups! Tarea no encontrada"
+  "task_empty_title": "Ups! Tarea no encontrada",
+  "tutorial_task_1": "Toque la casilla de verificación izquierda para marcar",
+  "tutorial_task_10": "¡Gracias por usar esta aplicación!",
+  "tutorial_task_2": "Toca la casilla de verificación de la izquierda para eliminar la marca.",
+  "tutorial_task_3": "Toca la × derecha para eliminar esta tarea",
+  "tutorial_task_4": "Toca la parte inferior derecha + para agregar una tarea",
+  "tutorial_task_5": "Toca para editar esta tarea",
+  "tutorial_task_5_note": "Puedes escribir notas aquí.",
+  "tutorial_task_5_subtask": "Puedes agregar sub tareas aquí",
+  "tutorial_task_6": "Toque prolongado para arrastrar esta tarea",
+  "tutorial_task_7": "Toca la esquina superior derecha ⁝ para editar o eliminar esta lista",
+  "tutorial_task_8": "Hay otras funciones fáciles de usar, ¡pruébalas!",
+  "tutorial_task_9": "Eso es todo por el tutorial. Espero que esta aplicación te sea útil."
 }
