--- a/lib/i18n/string_es.i18n.json
+++ b/lib/i18n/string_es.i18n.json
@@ -1,7 +1,6 @@
 {
-  "@@locale": "es",
   "app_name": "Tasking",
-  "buttom_reminder": "Recordatorio",
+  "button_reminder": "Recordatorio",
   "button_add_due_date": "Fecha de vencimiento",
   "button_cancel": "Cancelar",
   "button_clear": "Limpiar",
@@ -41,10 +40,6 @@
   "language_es": "Español",
   "modal_backup_export": "Exportar en el dispositivo",
   "modal_backup_import": "Importar desde el dispositivo",
-  "notification_disable_description_modal": "Habilite las notificaciones desde la configuración para recibir una notificación sobre sus tareas.",
-  "notification_disable_title_modal": "Notificaciones deshabilitadas",
-  "notification_enable_description_modal": "Recibirá una notificación sobre sus tareas y recordatorios diarios.",
-  "notification_enable_title_modal": "Notificaciones habilitadas",
   "page_about_author": "Ingedevs",
   "page_about_author_description": "Soy un desarrollador de software de México. Me encanta crear aplicaciones y aprender cosas nuevas.",
   "page_about_description": "Tasking es una aplicación simple del administrador de tareas. Es gratis y de código abierto.",
